Added include directory for NDK to project
E: layouts not displaying